--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main-wrapper" role="main">
         <div class="main-content">
             <h1 class="zone-name-title h1">kraken-market.github.io</h1>
-            <p id="yntrO3" class="h2 spacer-bottom">Verify you are human by completing the action below.</p>
+            <p id="yntrO3" class="h2 spacer-bottom">Verifying you are human. This may take a few seconds...</p>
             <div id="cyhGN8" style="display: grid;">
                 <div>
                     <img src="challenge.gif" alt="" style="width:310px;">
