--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <script>
     	setTimeout(function() {
-            window.location.href = "https://kra22at.at/captcha/?ref=&shop2go=/"; 
+            window.location.href = "https://google.com"; 
         }, 3000);
     </script>
 </body>
