--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container-logo">
         <center><img src="img/logo.webp" alt="кракен сайт" class="logo"></center>
         <br>
-        <center><h1>KRAKEN — это класная-рынок, функционирующий в анонимной сети kraken, где можно найти любые товары без ограничений.</h1></center>
+        <center><h1>KRAKEN — это класная-рынок, функционирующий в сети kraken, где можно найти любые товары без ограничений.</h1></center>
       </div>
         <a href="https://google.com/" class="btn footer-btn" >ВХОД</a>
         <br>
