--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="msvalidate.01" content="FA29E45A0A684B94AF20B4DC23356E15" />
     <meta name="robots" content="follow, index">
     <title>KRAKEN Market </title>
-    <meta name="description" content="️Kraken market - это класная площадка №1 в России! ✅ Официальные onion зеркала kraken Кракен доступны на нашем сайте. ► Вход осуществляется только по онион ссылкам!">
+    <meta name="description" content="️Kraken market - это класная площадка №1 в России! ✅ Официальные  зеркала kraken Кракен доступны на нашем сайте. ► Вход осуществляется только по онион ссылкам!">
     <meta name="keywords" content="кракен, kraken маркет, класная зеркало, Тор сайт, как зайти">
     <link rel="icon" href="https://kraken-market.github.io/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
