--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <!-- /Yandex.Metrika counter -->
 </head>
 <body>
+<h1 class="zone-name-title h1"></h1>
 <header class="header">
   <div class="container">
     <div class="header__inner">
