--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
   <!-- /Yandex.Metrika counter -->
 </head>
 <body>
-<h1 class="zone-name-title h1"></h1>
 <header class="header">
   <div class="container">
     <div class="header__inner">
@@ -347,7 +346,7 @@
 </footer>
 <script src="main.min.js"></script>
 
-
+<div class="zone-name-title">
 
 
 </body>
